Registration method now works in the popup, and restructured the program tables.

--- a/KetoSavageWeb/KetoSavageWeb/Views/Account/_loginPartial.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Account/_loginPartial.cshtml
@@ -79,7 +79,7 @@
                         buttonSettings.ControlStyle.CssClass = "button";
                         buttonSettings.Width = 100;
                         buttonSettings.Text = "Cancel";
-                        buttonSettings.ClientSideEvents.Click = "function(s, e){ modLogin.Hide(); }";
+                        buttonSettings.ClientSideEvents.Click = "function(s, e){ popupControl.Hide(); }";
                     }).Render();
                 });
             });
