Working on the programTemplate

--- a/KetoSavageWeb/KetoSavageWeb/Views/Programs/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Programs/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model KetoSavageWeb.ViewModels.ProgramsViewModel
+﻿@model KetoSavageWeb.ViewModels.ProgramListViewModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Program Templates";
 }
 
-<h2>Index</h2>
+@Html.Action("programGridView")
 
