--- a/KetoSavageWeb/KetoSavageWeb/Views/Home/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Home/Index.cshtml
@@ -61,6 +61,9 @@
 
             }
         </div>
+        <div>
+            Dashboard section here.
+        </div>
     </center>
 
     @Html.DevExpress().PopupControl(settings =>
