--- a/KetoSavageWeb/KetoSavageWeb/Views/Programs/_programGridViewPartial.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Programs/_programGridViewPartial.cshtml
@@ -39,7 +39,8 @@
         });
         settings.Columns.Add(c =>
         {
-            c.FieldName = "ProgramGoal";
+            c.FieldName = "GoalName";
+            c.Caption = "Category";
             c.VisibleIndex = 3;
             c.EditFormSettings.Visible = DefaultBoolean.False;
         });
@@ -47,7 +48,7 @@
         {
             g.Visible = false;
             g.VisibleIndex = 4;
-            g.FieldName = "SelectedGoalId";
+            g.FieldName = "GoalId";
             g.Caption = "Goal";
             g.EditFormSettings.Visible = DefaultBoolean.True;
             g.ColumnType = MVCxGridViewColumnType.ComboBox;
