--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_userGridViewPartial.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_userGridViewPartial.cshtml
@@ -18,11 +18,17 @@
         userList.SettingsPager.PageSizeItemSettings.Items = new string[] { "10", "20", "50" };
 
         userList.CommandColumn.Visible = true;
-        userList.CommandColumn.ShowNewButtonInHeader = true;
+        userList.CommandColumn.ShowNewButtonInHeader = false;
         userList.CommandColumn.ShowEditButton = true;
 
-        userList.KeyFieldName = "UserId";
+        userList.KeyFieldName = "Id";
 
+        userList.Columns.Add(c =>
+        {
+            c.FieldName = "Id";
+            c.Visible = false;
+            
+        });
         userList.Columns.Add(c =>
         {
             c.FieldName = "UserId";
@@ -32,24 +38,28 @@
         {
             c.FieldName = "UserName";
             c.ReadOnly = true;
+            c.VisibleIndex = 1;
         });
         userList.Columns.Add(c =>
         {
             c.FieldName = "FullName";
             c.Caption = "Name";
             c.ReadOnly = true;
+            c.VisibleIndex = 2;
         });
         userList.Columns.Add(c =>
         {
             c.FieldName = "UserType";
             c.Caption = "User Type";
             c.ReadOnly = true;
+            c.VisibleIndex = 3;
         });
         userList.Columns.Add(c =>
         {
             c.FieldName = "ProgramName";
             c.Caption = "Program";
             c.EditFormSettings.Visible = DefaultBoolean.False;
+            c.VisibleIndex = 4;
         });
         userList.Columns.Add(g =>
         {
@@ -58,32 +68,38 @@
             g.Caption = "Program";
             g.EditFormSettings.Visible = DefaultBoolean.True;
             g.ColumnType = MVCxGridViewColumnType.ComboBox;
+            g.VisibleIndex = 5;
             var combo = g.PropertiesEdit as ComboBoxProperties;
             combo.DataSource = ViewBag.ProgramList;
+
         });
         userList.Columns.Add(c =>
         {
             c.FieldName = "currentProgramStartDate";
             c.Caption = "Start Date";
             c.ColumnType = MVCxGridViewColumnType.DateEdit;
+            c.VisibleIndex = 6;
         });
         userList.Columns.Add(c =>
         {
             c.FieldName = "currentProgramRenewalDate";
             c.Caption = "Renewal Date";
             c.ColumnType = MVCxGridViewColumnType.DateEdit;
+            c.VisibleIndex = 7;
         });
         userList.Columns.Add(c =>
         {
             c.FieldName = "currentProgramEndDate";
             c.Caption = "End Date";
             c.ColumnType = MVCxGridViewColumnType.DateEdit;
+            c.VisibleIndex = 8;
         });
         userList.Columns.Add(c =>
         {
             c.FieldName = "Notes";
             c.Visible = false;
             c.EditFormSettings.Visible = DefaultBoolean.True;
+            c.VisibleIndex = 9;
         });
         userList.Columns.Add(c =>
         {
@@ -92,6 +108,7 @@
             c.Visible = false;
             c.Caption = "Coach";
             c.EditFormSettings.Visible = DefaultBoolean.True;
+            c.VisibleIndex = 10;
             var combo = c.PropertiesEdit as ComboBoxProperties;
             combo.DataSource = ViewBag.CoachList;
         });
