Added filtering to Manage User Grid

--- a/KetoSavageWeb/KetoSavageWeb/Views/ManageUsers/_GridViewPartial.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/ManageUsers/_GridViewPartial.cshtml
@@ -19,6 +19,9 @@
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowNewButtonInHeader = true;
         settings.CommandColumn.ShowEditButton = true;
+        settings.Settings.ShowFilterRow = true;
+        settings.Settings.ShowFilterRowMenu = true;
+        settings.CommandColumn.ShowClearFilterButton = true;
 
         settings.KeyFieldName = "UserName";
 
