--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0" />
     <title>@ViewBag.Title</title>
+    <script src="@Url.Content("~/Scripts/JSCustom.js")" type="text/javascript"></script>
 
     
     @Html.DevExpress().GetStyleSheets(
