--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_userProgramDetails.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_userProgramDetails.cshtml
@@ -1,11 +1,32 @@
-﻿<div class="center">
-    Possibly a detailed popup so that the coach can modify users?
-    @Html.DevExpress().GridView(settings =>
+﻿@model IEnumerable<KetoSavageWeb.ViewModels.UserProgramDetails>
+
+Possibly a detailed popup so that the coach can modify users?
+
+@{ 
+    var detailsGrid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "userDetailGrid";
         settings.CallbackRouteValues = new { Controller = "UserPrograms", Action = "UserProgramDetails" };
         settings.ClientSideEvents.BeginCallback = "OnDetailGridBeginCallback";
         settings.ClientSideEvents.EndCallback = "OnDetailGridEndCallback";
 
-    }).Bind(Model).GetHtml()
-</div>
+        settings.KeyFieldName = "ProgramUserId";
+
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "ProgramUserId";
+            c.Visible = false;
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "FullName";
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "Notes";
+
+        });
+    });
+}
+@detailsGrid.Bind(Model).GetHtml()
+
