--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/Index.cshtml
@@ -9,6 +9,9 @@
 {
     settings.Name = "UserProgramDetails";
     settings.ShowMaximizeButton = true;
+    settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
+    settings.PopupVerticalAlign = PopupVerticalAlign.WindowCenter;
+    settings.Modal = true;
     settings.Width = Unit.Pixel(800);
     settings.Height = Unit.Percentage(50);
     settings.SetContent(() =>
