--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/GridView/styles.css
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/GridView/styles.css
@@ -12,7 +12,7 @@
 }
 .dxgvControl_KetoSavage a
 {
-    color: #0a0a0a;
+    color: #4d4d4d;
     text-decoration: none;
 }
 .dxgvControl_KetoSavage a:hover
