--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/Index.cshtml
@@ -13,10 +13,14 @@
     settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
     settings.PopupVerticalAlign = PopupVerticalAlign.WindowCenter;
     settings.Modal = true;
+    settings.HeaderText = "Edit/Update Client Program";
     settings.Width = Unit.Pixel(800);
     settings.Height = Unit.Percentage(50);
     settings.SetContent(() =>
     {
-        Html.RenderPartial("_userProgramDetails", null);
+
+        //Html.RenderPartial("_userProgramDetails", null);
+        Html.RenderPartial("_userProgramHeader");
     });
+
 }).GetHtml()
