--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_userProgramDetails.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_userProgramDetails.cshtml
@@ -7,6 +7,7 @@
         settings.CallbackRouteValues = new { Controller = "UserPrograms", Action = "UserProgramDetails" };
         settings.ClientSideEvents.BeginCallback = "OnDetailGridBeginCallback";
         settings.ClientSideEvents.EndCallback = "OnDetailGridEndCallback";
+        settings.Width = Unit.Percentage(100);
 
         settings.KeyFieldName = "ProgramUserId";
 
@@ -27,4 +28,5 @@
     });
 }
 @detailsGrid.Bind(Model).GetHtml()
+
 
