Past programs work.

--- a/KetoSavageWeb/KetoSavageWeb/Views/Programs/_programGridViewPartial.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Programs/_programGridViewPartial.cshtml
@@ -34,6 +34,11 @@
         });
         settings.Columns.Add(c =>
         {
+            c.FieldName = "WeightFactor";
+            c.Caption = "Weight Factor";
+        });
+        settings.Columns.Add(c =>
+        {
             c.FieldName = "Description";
             c.VisibleIndex = 2;
         });
