--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_pastPerformance.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_pastPerformance.cshtml
@@ -37,6 +37,14 @@
         });
         g.Columns.Add(c =>
         {
+            c.FieldName = "PlannedProtein";
+        });
+        g.Columns.Add(c =>
+        {
+            c.FieldName = "ActualProtein";
+        });
+        g.Columns.Add(c =>
+        {
             c.FieldName = "PlannedCarbohydrates";
         });
         g.Columns.Add(c =>
